# tramola

./: .gitignore  CMakeLists.txt  README  README.md  arduino.ino  camera_gui.py  frames.gv  loratester.py  obj.data  obj.names  package.xml  requirements.txt  sensor.py  setup.py  speedChallenge_giray.py  start_ros.sh  stmcodes.ino  visiondarknet.py
arduino/: arduino.ino
arduinoCompanion/: arduinoCompanion.ino
arduinoGCS/: arduinoGCS.ino
config/: ekf_global.yaml  ekf_local.yaml  ekf_map.yaml  ekf_odom.yaml  move_base.yaml  move_base_params.yaml  navsat.yaml  navsat_transform.yaml
launch/: costmap_visualization.launch  dummy_mavros.launch  gcs.launch  lidar_visualization.launch  localization.launch  monitor.launch  robot.launch  robot_sim.launch  rviz.launch  tekne.launch  tramola_gps_world.launch  turtlebot3_gazebo_sim.launch  vrx_sim.launch
maps/: map.yaml
msg/: Detection.msg  DetectionList.msg
rviz/: costmap.rviz  lidar.rviz  lidar_timestamp.rviz  local_costmap.rviz  navigation.rviz
scripts/: camera_publisher.py  cmd_vel_to_thrusters.py  control.py  costmap_visulization.sh  detection.py  detection_node.py  emergency_shutdown_test.py  gcs_gui.py  gps_odom_wrapper.py  latlon_to_goal.py  lidar_filter.py  lidar_visulation_console.py  lidar_visulization.sh  scale_scan.py  serial_sim.sh  telemetry_logger.py  timestamp_visualizer.py  turn_off_led.py
simulation_ws/src/tramola/: CMakeLists.txt  setup.cfg  setup.py
simulation_ws/src/tramola/tramola/: followPath.py  followPath2.py  task2.py  video.py  vision.py
srv/: imageDetection.srv
urdf/: macros.xacro  (+5 more)
(+137 files in other folders)
